[package]
name = "opt2r"
version = "0.1.0"
edition = "2021"
description = "A simple crate(library) that provides a way to convert Option to Result."
license = "MIT"
keywords = ["option", "result"]
documentation = "https://docs.rs/opt2r"
repository = "https://github.com/ignite720/opt2r"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = []

[dependencies]
